...
) {
    FloatingActionButton(
        modifier = Modifier,
        onClick = onClick,
    ) {
        if (favorited) {
            Icon(Icons.Filled.Favorite, "Favorite Button")
        } else {
            Icon(Icons.Filled.FavoriteBorder, "Favorite Button")
        }
    }
}
